# ideale-ai

./: README.md
bot/: .env.example  README.md  pyproject.toml
bot/bot/: agent.py  main.py  slack_bot.py
bot/bot/types/: chat_entry.py  slack_info.py
